# UP_NEWS

./: .gitignore  .replit  clean.yaml  db.sqlite3  manage.py  pyproject.toml  replit.md  requirements.txt
attached_assets/: Django_Commands_1751429087374.txt  _1751429087373.gitignore  about_1751429354139.html  about_1751429425502.css  base_1751429354139.html  base_1751429403937.css  contact_1751429354139.html  db_1751429087373.sqlite3  detail_1751429354139.html  extra_1751429087374.html  home_1751429354140.html  home_1751429403937.css  list_1751429354140.html  list_1751429425503.css  manage_1751429087374.py  register_form_1751429354140.html  requirements_1751429087374.txt  success_1751429354140.html  user_mannual_1751429087375.yaml
contact/: admin.py  apps.py  forms.py  models.py  views.py
contact/migrations/: 0001_initial.py
core/: admin.py  apps.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_banner.py  0003_homepagestats.py
events/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
events/migrations/: 0001_initial.py
news/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py
pranteey_yuva/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: base.css  components.css  detail.css  home.css  list.css  loader.css
static/js/: animations.js  loader.js
staticfiles/css/: about.css  base.css  contact.css  detail.css  home.css  loader.css
staticfiles/js/: animations.js  main.js
templates/: base.html
templates/components/: loaders.html
templates/contact/: contact.html
(+8 files in other folders)
