[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django-crispy-forms>=2.0",
    "django>=5.1,<6.0",
    "reportlab>=4.0.0",
    "django-environ>=0.11.2",
    "whitenoise>=6.6.0",
    "crispy-bootstrap5>=2025.6",
    "django-ckeditor>=6.7.0",
    "pillow>=10.0.0",
    "qrcode>=7.4.2",
]
